--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "recharts": "^1.8.5",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2"
   },
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@types/recharts": "^1.8.9",
     "@types/styled-components": "^5.0.1"
   }
 }
