--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
     "styled-components": "^5.1.0",
+    "styled-reset": "^4.1.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
